# AndroidJNIDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/shark/jni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: A.c  A.h  native-lib.cpp  org_libharu_PdfPage.c
app/src/main/java/com/shark/jni/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/shark/jni/: ExampleUnitTest.java
